Create the control buttons on a notification when showing the buttons if needed.

BUG=709862

Review-Url: https://codereview.chromium.org/2809133002
Cr-Commit-Position: refs/heads/master@{#463947}

Former-commit-id: 9871ced334b179dbe05c98c9e99bca5114a3bc5e